WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94711
[WK2] Refactoring: WebBackForwardList getters should be const
https://bugs.webkit.org/show_bug.cgi?id=94711
Summary
[WK2] Refactoring: WebBackForwardList getters should be const
Mikhail Pozdnyakov
Reported
2012-08-22 08:01:00 PDT
The WebBackForwardList getters should be const for the following reasons: 1) WebBackForwardList getters are not consistent with each other (WebBackForwardList::entries() is const but WebBackForwardList::currentIndex() is not). 2) Every programmer expects a getter to be const.
Attachments
patch
(22.77 KB, patch)
2012-08-22 08:09 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
patch
(3.97 KB, patch)
2012-08-22 08:24 PDT
,
Mikhail Pozdnyakov
kenneth
: review+
kenneth
: commit-queue-
Details
Formatted Diff
Diff
patch v2
(4.12 KB, patch)
2012-08-22 10:37 PDT
,
Mikhail Pozdnyakov
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
to be landed
(4.12 KB, patch)
2012-08-23 01:29 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-08-22 08:09:47 PDT
Created
attachment 159934
[details]
patch
Mikhail Pozdnyakov
Comment 2
2012-08-22 08:10:29 PDT
Comment on
attachment 159934
[details]
patch Wrong diff :(
Mikhail Pozdnyakov
Comment 3
2012-08-22 08:24:30 PDT
Created
attachment 159941
[details]
patch
Kenneth Rohde Christiansen
Comment 4
2012-08-22 09:08:25 PDT
Comment on
attachment 159941
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=159941&action=review
> Source/WebKit2/ChangeLog:10 > + Besides having a not const getters looks like bad C++ style.
double spacing. bad C++ style, explain?
Mikhail Pozdnyakov
Comment 5
2012-08-22 10:37:07 PDT
Created
attachment 159962
[details]
patch v2 Added explanation to ChangeLog.
WebKit Review Bot
Comment 6
2012-08-22 12:35:46 PDT
Comment on
attachment 159962
[details]
patch v2 Rejecting
attachment 159962
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ing Tools/ChangeLog CONFLICT (content): Merge conflict in Tools/ChangeLog Failed to merge in the changes. Patch failed at 0001 Unreviewed, add
aelias@chromium.org
to committers When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/13567353
Mikhail Pozdnyakov
Comment 7
2012-08-23 01:29:21 PDT
Created
attachment 160113
[details]
to be landed
WebKit Review Bot
Comment 8
2012-08-23 01:46:49 PDT
Comment on
attachment 160113
[details]
to be landed Clearing flags on attachment: 160113 Committed
r126406
: <
http://trac.webkit.org/changeset/126406
>
WebKit Review Bot
Comment 9
2012-08-23 01:46:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug