[WK2] Refactoring: WebBackForwardList getters should be const https://bugs.webkit.org/show_bug.cgi?id=94711

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-08-23
Reviewed by Kenneth Rohde Christiansen.

Before the change were not consistent with each other
(WebBackForwardList::entries() was const but WebBackForwardList::currentIndex() was not).
Besides having not const getters is not a good practice in C++. (Please read
Scott Meyers. Effective C++ (3rd edition). ISBN: 0-321-33487-6.
Item 3: 'Use const whenever possible').

* UIProcess/WebBackForwardList.cpp:
(WebKit::WebBackForwardList::backListCount):
(WebKit::WebBackForwardList::forwardListCount):
(WebKit::WebBackForwardList::backListAsImmutableArrayWithLimit):
(WebKit::WebBackForwardList::forwardListAsImmutableArrayWithLimit):
* UIProcess/WebBackForwardList.h:
(WebKit::WebBackForwardList::currentIndex):
(WebBackForwardList):

Canonical link: https://commits.webkit.org/112634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126406 268f45cc-cd09-0410-ab3c-d52691b4dbfc